modules/compute/test/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: todo-cozy-frontend

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3000
  selector:
    app: todo-cozy-backend
